--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,21 @@
       "email": "cstuder@existenz.ch"
     }
   ],
-  "require": {}
+  "autoload": {
+    "psr-4": {
+      "cstuder\\ParseSwissMetNet\\": "src/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "cstuder\\ParseSwissMetNet\\": "tests/"
+    }
+  },
+  "require": {},
+  "require-dev": {
+    "phpunit/phpunit": "^9"
+  },
+  "scripts": {
+    "test": "vendor/bin/phpunit"
+  }
 }
